Revert "Replacing nested with linear bucketing in pivot aggregations. (#13610)" (#13789)
This reverts commit d630c1f949cd073048a7ee3a313c7515d1de8138.