@@ -16,163 +16,75 @@
  */
 package org.graylog.storage.opensearch2.views.searchtypes.pivot.buckets;
 
-import com.google.common.base.Joiner;
-import com.google.common.base.Splitter;
-import com.google.common.collect.ImmutableList;
 import org.graylog.plugins.views.search.Query;
-import org.graylog.plugins.views.search.aggregations.MissingBucketConstants;
-import org.graylog.plugins.views.search.searchtypes.pivot.BucketSpec;
 import org.graylog.plugins.views.search.searchtypes.pivot.Pivot;
+import org.graylog.plugins.views.search.searchtypes.pivot.PivotSort;
+import org.graylog.plugins.views.search.searchtypes.pivot.SeriesSort;
+import org.graylog.plugins.views.search.searchtypes.pivot.SeriesSpec;
+import org.graylog.plugins.views.search.searchtypes.pivot.SortSpec;
 import org.graylog.plugins.views.search.searchtypes.pivot.buckets.Values;
-import org.graylog.shaded.opensearch2.org.opensearch.index.query.BoolQueryBuilder;
-import org.graylog.shaded.opensearch2.org.opensearch.index.query.QueryBuilders;
-import org.graylog.shaded.opensearch2.org.opensearch.script.Script;
+import org.graylog.storage.opensearch2.views.OSGeneratedQueryContext;
+import org.graylog.storage.opensearch2.views.searchtypes.pivot.OSPivotBucketSpecHandler;
 import org.graylog.shaded.opensearch2.org.opensearch.search.aggregations.AggregationBuilder;
 import org.graylog.shaded.opensearch2.org.opensearch.search.aggregations.AggregationBuilders;
 import org.graylog.shaded.opensearch2.org.opensearch.search.aggregations.BucketOrder;
-import org.graylog.shaded.opensearch2.org.opensearch.search.aggregations.bucket.MultiBucketsAggregation;
-import org.graylog.shaded.opensearch2.org.opensearch.search.aggregations.bucket.filter.Filters;
-import org.graylog.shaded.opensearch2.org.opensearch.search.aggregations.bucket.filter.FiltersAggregationBuilder;
-import org.graylog.shaded.opensearch2.org.opensearch.search.aggregations.bucket.filter.ParsedFilters;
 import org.graylog.shaded.opensearch2.org.opensearch.search.aggregations.bucket.terms.Terms;
 import org.graylog.shaded.opensearch2.org.opensearch.search.aggregations.bucket.terms.TermsAggregationBuilder;
-import org.graylog.shaded.opensearch2.org.opensearch.search.aggregations.support.MultiTermsValuesSourceConfig;
-import org.graylog.storage.opensearch2.views.OSGeneratedQueryContext;
-import org.graylog.storage.opensearch2.views.searchtypes.pivot.OSPivotBucketSpecHandler;
-import org.graylog.storage.opensearch2.views.searchtypes.pivot.PivotBucket;
-import org.graylog2.storage.DetectedSearchVersion;
-import org.graylog2.storage.SearchVersion;
 
 import javax.annotation.Nonnull;
-import javax.inject.Inject;
-import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class OSValuesHandler extends OSPivotBucketSpecHandler<Values, Terms> {
-    private static final String KEY_SEPARATOR_CHARACTER = "\u2E31";
-    private static final String KEY_SEPARATOR_PHRASE = " + \"" + KEY_SEPARATOR_CHARACTER + "\" + ";
-    private static final String AGG_NAME = "agg";
-    private static final ImmutableList<String> MISSING_BUCKET_KEYS = ImmutableList.of(MissingBucketConstants.MISSING_BUCKET_NAME);
-    private static final BucketOrder defaultOrder = BucketOrder.count(false);
-    private final boolean supportsMultiTerms;
-
-    @Inject
-    public OSValuesHandler(@DetectedSearchVersion SearchVersion version) {
-        this.supportsMultiTerms = version.satisfies(SearchVersion.Distribution.OPENSEARCH, ">=2.2.0");
-    }
-
     @Nonnull
     @Override
-    public Optional<CreatedAggregations<AggregationBuilder>> doCreateAggregation(String name, Pivot pivot, List<Values> bucketSpecs, OSGeneratedQueryContext queryContext, Query query) {
-        final List<BucketOrder> ordering = orderListForPivot(pivot, queryContext, defaultOrder);
-        final int limit = bucketSpecs.stream()
-                .map(Values::limit)
-                .max(Integer::compare)
-                .orElse(Values.DEFAULT_LIMIT);
-        final AggregationBuilder termsAggregation = createTerms(bucketSpecs, ordering, limit);
-        final FiltersAggregationBuilder filterAggregation = createFilter(name, bucketSpecs)
-                .subAggregation(termsAggregation);
-        return Optional.of(CreatedAggregations.create(filterAggregation, termsAggregation, List.of(termsAggregation, filterAggregation)));
+    public Optional<AggregationBuilder> doCreateAggregation(String name, Pivot pivot, Values valuesSpec, OSGeneratedQueryContext OSGeneratedQueryContext, Query query) {
+        final List<BucketOrder> ordering = orderListForPivot(pivot, valuesSpec, OSGeneratedQueryContext);
+        final TermsAggregationBuilder builder = AggregationBuilders.terms(name)
+                .minDocCount(1)
+                .field(valuesSpec.field())
+                .order(ordering.isEmpty() ? Collections.singletonList(BucketOrder.count(false)) : ordering)
+                .size(valuesSpec.limit());
+        record(OSGeneratedQueryContext, pivot, valuesSpec, name, Terms.class);
+        return Optional.of(builder);
     }
 
-    private FiltersAggregationBuilder createFilter(String name, List<Values> bucketSpecs) {
-        final BoolQueryBuilder queryBuilder = QueryBuilders.boolQuery();
-        bucketSpecs.stream()
-                .map(Values::field)
-                .map(QueryBuilders::existsQuery)
-                .forEach(queryBuilder::must);
-        return AggregationBuilders.filters(name, queryBuilder)
-                .otherBucket(true);
-    }
+    private List<BucketOrder> orderListForPivot(Pivot pivot, Values valuesSpec, OSGeneratedQueryContext OSGeneratedQueryContext) {
+        return pivot.sort()
+                .stream()
+                .map(sortSpec -> {
+                    if (sortSpec instanceof PivotSort && valuesSpec.field().equals(sortSpec.field())) {
+                        return BucketOrder.key(sortSpec.direction().equals(SortSpec.Direction.Ascending));
+                    }
+                    if (sortSpec instanceof SeriesSort) {
+                        final Optional<SeriesSpec> matchingSeriesSpec = pivot.series()
+                                .stream()
+                                .filter(series -> series.literal().equals(sortSpec.field()))
+                                .findFirst();
+                        return matchingSeriesSpec
+                                .map(seriesSpec -> {
+                                    if (seriesSpec.literal().equals("count()")) {
+                                        return BucketOrder.count(sortSpec.direction().equals(SortSpec.Direction.Ascending));
+                                    }
+                                    return BucketOrder.aggregation(OSGeneratedQueryContext.seriesName(seriesSpec, pivot), sortSpec.direction().equals(SortSpec.Direction.Ascending));
+                                })
+                                .orElse(null);
+                    }
 
-    private AggregationBuilder createTerms(List<Values> valueBuckets, List<BucketOrder> ordering, int limit) {
-        return valueBuckets.size() > 1
-                ? supportsMultiTerms
-                ? createMultiTerms(valueBuckets, ordering, limit)
-                : createScriptedTerms(valueBuckets, ordering, limit)
-                : createSimpleTerms(valueBuckets.get(0), ordering, limit);
-    }
-
-    private AggregationBuilder createSimpleTerms(Values values, List<BucketOrder> ordering, int limit) {
-        return AggregationBuilders.terms(AGG_NAME)
-                .field(values.field())
-                .order(ordering)
-                .size(limit);
-    }
-
-    private AggregationBuilder createMultiTerms(List<Values> valueBuckets, List<BucketOrder> ordering, int limit) {
-        return AggregationBuilders.multiTerms(AGG_NAME)
-                .terms(valueBuckets.stream()
-                        .map(value -> new MultiTermsValuesSourceConfig.Builder()
-                                .setFieldName(value.field())
-                                .build())
-                        .collect(Collectors.toList()))
-                .order(ordering)
-                .size(limit);
-    }
-
-    private TermsAggregationBuilder createScriptedTerms(List<? extends BucketSpec> buckets, List<BucketOrder> ordering, int limit) {
-        return AggregationBuilders.terms(AGG_NAME)
-                .script(scriptForPivots(buckets))
-                .size(limit)
-                .order(ordering.isEmpty() ? List.of(BucketOrder.count(false)) : ordering);
-    }
-
-    private Script scriptForPivots(Collection<? extends BucketSpec> pivots) {
-        final String scriptSource = Joiner.on(KEY_SEPARATOR_PHRASE).join(pivots.stream()
-                .map(bucket -> "String.valueOf(doc['" + bucket.field() + "'].size() == 0 ? \"" + MissingBucketConstants.MISSING_BUCKET_NAME + "\" : doc['" + bucket.field() + "'].value)")
-                .collect(Collectors.toList()));
-        return new Script(scriptSource);
+                    return null;
+                })
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public Stream<PivotBucket> extractBuckets(List<BucketSpec> bucketSpecs, PivotBucket initialBucket) {
-        final ImmutableList<String> previousKeys = initialBucket.keys();
-        final MultiBucketsAggregation.Bucket previousBucket = initialBucket.bucket();
-        final ParsedFilters filterAggregation = previousBucket.getAggregations().get(AGG_NAME);
-        final MultiBucketsAggregation termsAggregation = filterAggregation.getBuckets().get(0).getAggregations().get(AGG_NAME);
-        final Filters.Bucket otherBucket = filterAggregation.getBuckets().get(1);
-        final Stream<PivotBucket> bucketStream = termsAggregation.getBuckets().stream()
-                .map(bucket -> {
-                    final ImmutableList<String> keys = ImmutableList.<String>builder()
-                            .addAll(previousKeys)
-                            .addAll(extractKeys(bucket))
-                            .build();
-
-                    return PivotBucket.create(keys, bucket);
-                });
-
-        return otherBucket.getDocCount() > 0
-                ? Stream.concat(bucketStream, Stream.of(PivotBucket.create(MISSING_BUCKET_KEYS, otherBucket)))
-                : bucketStream;
-    }
-
-    private Iterable<String> extractKeys(MultiBucketsAggregation.Bucket bucket) {
-        return supportsMultiTerms ? extractMultiTermsKeys(bucket) : splitKeys(bucket.getKeyAsString());
-    }
-
-    private ImmutableList<String> extractMultiTermsKeys(MultiBucketsAggregation.Bucket bucket) {
-        final Object key = bucket.getKey();
-        if (key == null) {
-            return ImmutableList.of();
-        }
-        if (key instanceof Collection) {
-            //noinspection unchecked
-            return ((Collection<Object>) key).stream()
-                    .map(String::valueOf)
-                    .collect(ImmutableList.toImmutableList());
-        }
-        if (key instanceof String) {
-            return ImmutableList.of((String)key);
-        }
-
-        return ImmutableList.of(String.valueOf(key));
-    }
-
-    private ImmutableList<String> splitKeys(String keys) {
-        return ImmutableList.copyOf(Splitter.on(KEY_SEPARATOR_CHARACTER).split(keys));
+    public Stream<Bucket> doHandleResult(Values bucketSpec,
+                                         Terms termsAggregation) {
+        return termsAggregation.getBuckets().stream()
+                .map(entry -> Bucket.create(entry.getKeyAsString(), entry));
     }
 }
